SMAR-32047: MegaMenu layout fixes (backdrop shadow, z-indexes...)

--- a/tetrapak-publicweb/ui.dev/src/source/styles/global/default/en/_vars.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/styles/global/default/en/_vars.scss
@@ -148,3 +148,4 @@ $anchor-menu-indicator-height: 2px;
 // hex - shadow
 $dialog-shadow-color: #0000001A;
 $submenu-shadow-color: #000000;
+$overlay-color: rgba(0,0,0,0.5);
