--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/megamenuconfigv2/_megaMenuConfigV2.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/megamenuconfigv2/_megaMenuConfigV2.scss
@@ -5,6 +5,9 @@
     align-items: stretch;
     border-top: 1px solid $color-mercury;
     box-sizing: border-box;
+    position: fixed;
+    top: auto;
+    z-index: $zindex-anchor-menu;
 
     .cq-Editable-dom--container,
     .cq-Editable-dom--container.aem-GridColumn {
